--- a/appsettings.json
+++ b/appsettings.json
@@ -7,5 +7,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "TedBankContext": "Data Source=Ted.db"
+  },
+  "cors": {
+    "rules": [
+      {
+        "origin": "*",
+        "allow": true
+      }
+    ]
   }
-}
+}0
